[gd_scene load_steps=8 format=2]

[ext_resource path="res://player/playerStateMachine.gd" type="Script" id=1]
[ext_resource path="res://player/head.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="CapsuleMesh" id=2]
radius = 0.5

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Vector3( 0, 0.5, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "crouch"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "slide"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Vector3( 0, -0.5, 0 ) ]
}

[node name="player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
layers = 524288
mesh = SubResource( 2 )
material/0 = null

[node name="head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
script = ExtResource( 2 )

[node name="playerCamera" type="ClippedCamera" parent="head"]
cull_mask = 524287
margin = 0.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="head"]
anims/RESET = SubResource( 4 )
anims/crouch = SubResource( 5 )
anims/slide = SubResource( 3 )

[node name="wallClimbSpaceBuffer" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1.5 )
debug_shape_thickness = 5

[node name="wallClimbColliderCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
enabled = true
cast_to = Vector3( 0, 0, -100 )
debug_shape_thickness = 5

[node name="wallClimbFeetCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.8, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1.5 )
debug_shape_thickness = 5
